--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
     "bem-cn-lite": "^4.1.0",
+    "class-variance-authority": "^0.7.1",
     "react-router-dom": "^6.29.0",
     "zustand": "^5.0.3"
   },
@@ -58,6 +59,7 @@
     "husky": "^8.0.3",
     "sass": "^1.68.0",
     "typescript": "^5.2.2",
+    "typescript-plugin-css-modules": "^5.1.0",
     "vite": "^5.0.0",
     "vite-plugin-svgr": "^4.2.0"
   },
