--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "plugins": [{"name": "typescript-plugin-css-modules"}]
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
